image list replaced by adaptivecard

--- a/html/single-end.html
+++ b/html/single-end.html
@@ -53,6 +53,6 @@
       }, document.getElementById('BotChatGoesHere'));
     </script>
 
-    <a href='command:extension.htmlCardEvent?xresponsex' id='event_handler_a' ></a>
+    <a href='command:extension.acEvent?xresponsex' id='event_handler_a' ></a>
   </body>
 </html>
